--- a/style.css
+++ b/style.css
@@ -359,3 +359,34 @@ footer .column p {
 .info__close path {
   fill: #fff;
 }
+
+.container {
+  width: 100%;
+  height: 300%;
+  background: #0E1525;
+  position: relative;
+  overflow: hidden;
+}
+
+.container::before {
+  content: "";
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: radial-gradient(circle, #ffffff 10%, transparent 20%),
+    radial-gradient(circle, transparent 10%, #0E1525 20%);
+  background-size: 27px 27px; /* Adjust the size of the pattern */
+  animation: moveBackground 20s linear infinite; /* Adjust the animation duration and timing function */
+}
+
+@keyframes moveBackground {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(20%, 20%);
+  }
+}
+
